Kubernetes/3.3/files/back-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-dep
  namespace: app
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-back
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: multitool-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
