Kubernetes/3.3/files/cache-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-dep
  namespace: app
  labels:
    app: cache
spec:
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: multitool-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
