Kubernetes/3.3/files/front-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-dep
  namespace: app
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-front
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: multitool-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
