Kubernetes/3.3/files/network-policy-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: app
  name: denyall-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
